# autonomy_task

./: README.md
tb3_exploration_slam/: package.xml  setup.cfg  setup.py
tb3_exploration_slam/config/: nav2_params.yaml  slam_params.yaml
tb3_exploration_slam/launch/: exploration_slam.launch.py  save_map.launch.py
tb3_exploration_slam/maps/: office_map.pgm  office_map.yaml
tb3_exploration_slam/rviz/: exploration.rviz
tb3_exploration_slam/tb3_exploration_slam/: frontier_explorer.py
tb3_rrt_planner/: package.xml  setup.cfg  setup.py
tb3_rrt_planner/config/: rrt_params.yaml
tb3_rrt_planner/launch/: rrt_planner.launch.py
tb3_rrt_planner/maps/: office_map.pgm  office_map.yaml
tb3_rrt_planner/rviz/: rrt.rviz
tb3_rrt_planner/tb3_rrt_planner/: rrt.py  rrt_planner_node.py
tb3_rrt_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
tb3_rrt_rviz_plugin/include/tb3_rrt_rviz_plugin/: rrt_panel.hpp  rrt_tools.hpp
tb3_rrt_rviz_plugin/src/: rrt_panel.cpp  rrt_tools.cpp
tb3_semantic_interfaces/: CMakeLists.txt  package.xml
tb3_semantic_interfaces/srv/: QueryPlace.srv
tb3_semantic_mapping/: package.xml  setup.cfg  setup.py
tb3_semantic_mapping/launch/: semantic_mapping.launch.py
tb3_semantic_mapping/models/Kitchen/: model.sdf
tb3_semantic_mapping/models/office_signs/: model.config  model.sdf
tb3_semantic_mapping/models/office_signs/materials/scripts/: office_signs.material
tb3_semantic_mapping/rviz/: semantic.rviz
tb3_semantic_mapping/tb3_semantic_mapping/: demo_mock_vlm.py  semantic_matching.py  semantic_query_node.py  semantic_tagger_node.py  vlm_interface.py
tb3_semantic_mapping/test/: test_semantic.py
tb3_semantic_mapping/worlds/: office_building.world
