cmake_minimum_required(VERSION 3.8)
project(tb3_rrt_rviz_plugin)

if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake          REQUIRED)
find_package(rclcpp               REQUIRED)
find_package(rviz_common          REQUIRED)
find_package(rviz_default_plugins REQUIRED)
find_package(geometry_msgs        REQUIRED)
find_package(tf2                  REQUIRED)
find_package(tf2_ros              REQUIRED)
find_package(tf2_geometry_msgs    REQUIRED)
find_package(pluginlib            REQUIRED)


find_package(Qt5 REQUIRED COMPONENTS Core Widgets)


set(CMAKE_AUTOMOC        ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)


add_library(${PROJECT_NAME} SHARED
  src/rrt_tools.cpp
  include/tb3_rrt_rviz_plugin/rrt_tools.hpp
)

target_include_directories(${PROJECT_NAME}
  PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>
  ${Qt5Core_INCLUDE_DIRS}
  ${Qt5Widgets_INCLUDE_DIRS}
)

target_link_libraries(${PROJECT_NAME}
  Qt5::Core
  Qt5::Widgets
)

ament_target_dependencies(${PROJECT_NAME}
  rclcpp
  rviz_common
  rviz_default_plugins
  geometry_msgs
  tf2
  tf2_ros
  tf2_geometry_msgs
  pluginlib
)

pluginlib_export_plugin_description_file(rviz_common plugin_description.xml)


install(TARGETS ${PROJECT_NAME}
  EXPORT  ${PROJECT_NAME}Targets
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

install(DIRECTORY include/
  DESTINATION include
)

install(FILES plugin_description.xml
  DESTINATION share/${PROJECT_NAME}
)

ament_export_include_directories(include)
ament_export_libraries(${PROJECT_NAME})
ament_export_targets(${PROJECT_NAME}Targets)

ament_package()
