<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_rrt_rviz_plugin</name>
  <version>0.1.0</version>
  <description>
    Custom RViz2 panel plugin for the RRT path planner to publish /start_pose and /goal_pose (geometry_msgs/PoseStamped).
  </description>
  <maintainer email="manojvs1969@gmail.com">manoj</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pluginlib</depend>

  
  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
